// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinnerRoundFilled matches the snapshot 1`] = `
<div>
  <svg
    fill="none"
    style="color: rgb(255, 255, 255); overflow: visible; width: 100px;"
    viewBox="0 0 66 66"
  >
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="4"
      style="opacity: 1; transform-origin: center; animation: none;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="6.33"
      style="opacity: 0.25; transform-origin: center; animation: spinners-react-round-filled-inner 14s ease-in-out infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="10.16"
      style="opacity: 0.25; transform-origin: center; animation: spinners-react-round-filled-center 14s ease-in-out infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="13.75"
      style="opacity: 0.25; transform-origin: center; animation: spinners-react-round-filled-outer 14s ease-in-out infinite;"
    />
  </svg>
</div>
`;

exports[`SpinnerRoundFilled matches the snapshot with default props 1`] = `
<div>
  <svg
    fill="none"
    style="color: rgb(56, 173, 72); overflow: visible; width: 50px;"
    viewBox="0 0 66 66"
  >
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="4"
      style="opacity: 1; transform-origin: center; animation: none;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="12.66"
      style="opacity: 0.25; transform-origin: center; animation: spinners-react-round-filled-inner 1.4s ease-in-out infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="20.32"
      style="opacity: 0.25; transform-origin: center; animation: spinners-react-round-filled-center 1.4s ease-in-out infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="27.5"
      style="opacity: 0.25; transform-origin: center; animation: spinners-react-round-filled-outer 1.4s ease-in-out infinite;"
    />
  </svg>
</div>
`;
